--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
                 <h4> about me </h4>
                 <p>
-                    <a target="_blank" class="lik" onclick="myAlert()">vivaz.</a>
+                    <a target="_blank" class="lik" onclick="myAlert()">v!vaz.</a>
                 </p>
                 <center>
                     <hr />
