--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                 <div class="feature-l">
                     <span class="pfph cd"> <img class="profile-img"
-                            src="https://cdn.discordapp.com/attachments/1225237219267182632/1225256295959892108/image.png?ex=662077d9&is=660e02d9&hm=fa725440d16d07866e3e1213eff25d24b73813f2d12fa96c25bf9892f782a50a&"
+                            src="https://media.discordapp.net/attachments/1151581800544604192/1230751816833044501/0cc0ed002776ca129d81ba44b22491f3.png?ex=663475f3&is=662200f3&hm=e7631818ce4259d3cdd62323e4bd75713bb12b0644dc9b525307f6801cd23430&=&format=webp&quality=lossless"
                             alt="profile img" />
                     </span>
                     <h1 class="text-white">
