--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                 <div class="feature-l">
                     <span class="pfph cd"> <img class="profile-img"
-                            src="https://media.discordapp.net/attachments/1151581800544604192/1230751816833044501/0cc0ed002776ca129d81ba44b22491f3.png?ex=663475f3&is=662200f3&hm=e7631818ce4259d3cdd62323e4bd75713bb12b0644dc9b525307f6801cd23430&=&format=webp&quality=lossless"
+                            src="https://i.pinimg.com/736x/1b/6b/60/1b6b60646874799d3c1e1605816393e7.jpg"
                             alt="profile img" />
                     </span>
                     <h1 class="text-white">
